use dotnet 7.0 and 3.1 for csharp generator

--- a/.github/workflows/sdk-dotnet.yml
+++ b/.github/workflows/sdk-dotnet.yml
@@ -20,12 +20,11 @@ jobs:
           java-version: '16'
 
       - name: "Install Csharp"
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '3.1'
-
-      - name: "Install dotnet format"
-        run: dotnet tool install --global dotnet-format --version 5.1.225507
+          dotnet-version: |
+            3.1.x
+            7.0.x
 
       - name: "Checkout api reference"
         uses: actions/checkout@v3
@@ -70,12 +69,6 @@ jobs:
           IMPORT_RAML: "../commercetools-api-reference/api-specs/importapi/api.raml"
           ML_RAML: "../commercetools-api-reference/api-specs/ml/api.raml"
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
-
-      - name: "Run code formatter"
-        run: |
-          dotnet-format
-          dotnet-format --fix-style warn
-        working-directory: commercetools-dotnet-core-sdk-v2/commercetools.Sdk
 
       - name: "Checkout previous api reference"
         uses: actions/checkout@v3
