update dotnet graphql schema

--- a/.github/workflows/sdk-dotnet.yml
+++ b/.github/workflows/sdk-dotnet.yml
@@ -60,6 +60,11 @@ jobs:
         run: |
           cp commercetools-dotnet-core-sdk-v2/api-csharp-mixin.raml commercetools-api-reference/api-specs/api/csharp-mixin.raml
 
+      - name: "Update GraphQL schema"
+        run: |
+          cp commercetools-api-reference/api-specs/graphql/schema.sdl commercetools-dotnet-core-sdk-v2/commercetools.Sdk/commercetools.Sdk.GraphQL.Api/schema.graphqls
+          sed -i 's/^type Query implements.*/type Query {/' commercetools-dotnet-core-sdk-v2/commercetools.Sdk/commercetools.Sdk.GraphQL.Api/schema.graphqls
+
       - name: "Generate Csharp SDK"
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: commercetools-dotnet-core-sdk-v2
