feat: add generate connect postman collection to sdk-postman workflow

--- a/.github/workflows/sdk-postman.yml
+++ b/.github/workflows/sdk-postman.yml
@@ -83,6 +83,13 @@ jobs:
           RAML_FILE: "../commercetools-api-reference/api-specs/importapi/api.raml"
           LIB_NAME: "import"
 
+      - name: "Generate connect postman collection"
+        run: sudo chmod 777 /usr/local/bin && make build
+        working-directory: postman
+        env:
+          RAML_FILE: "../commercetools-api-reference/api-specs/connect/api.raml"
+          LIB_NAME: "connect"
+
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
         working-directory: postman
