--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,7 +6,8 @@ on:
 
 name: Update RAML
 
-permissions: {}
+permissions:
+  contents: write  # for stefanzweifel/git-auto-commit-action to push code in repo
 
 jobs:
 
