apply php mixin

--- a/.github/workflows/sdk-php.yml
+++ b/.github/workflows/sdk-php.yml
@@ -68,11 +68,15 @@ jobs:
           git log -1
         working-directory: commercetools-sdk-php-v2
 
+      - name: "Apply dotnet SDK mixin"
+        run: |
+          cp commercetools-sdk-php-v2/api-php-mixin.raml commercetools-api-reference/api-specs/api/php-mixin.raml
+
       - run: make -j2 build
         working-directory: commercetools-sdk-php-v2
         env:
           RAML_FILE: "../commercetools-api-reference/api-specs/api/api.raml"
-          API_RAML: "../commercetools-api-reference/api-specs/api/api.raml"
+          API_RAML: "../commercetools-api-reference/api-specs/api/php-mixin.raml"
           IMPORT_RAML: "../commercetools-api-reference/api-specs/importapi/api.raml"
           ML_RAML: "../commercetools-api-reference/api-specs/ml/api.raml"
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
