--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -22,16 +22,16 @@ jobs:
         include:
           - language: java
             repository: 'commercetools/commercetools-sdk-java-v2'
-            sshKey: ${{ secrets.JAVA_SDK_DEPLOY_KEY }}
+            sshKey: JAVA_SDK_DEPLOY_KEY
           - language: csharp
             repository: 'commercetools/commercetools-dotnet-core-sdk-v2'
-            sshKey: ${{ secrets.CSHARP_SDK_DEPLOY_KEY }}
+            sshKey: CSHARP_SDK_DEPLOY_KEY
           - language: typescript
             repository: 'commercetools/commercetools-sdk-typescript'
-            sshKey: ${{ secrets.TS_SDK_DEPLOY_KEY }}
+            sshKey: TS_SDK_DEPLOY_KEY
           - language: php
             repository: 'commercetools/commercetools-sdk-php-v2'
-            sshKey: ${{ secrets.SDK_DEPLOY_KEY }}
+            sshKey: SDK_DEPLOY_KEY
 #          - language: postman
 #            repository: 'commercetools/commercetools-postman-collection'
 #            sshKey: ${{ secrets.POSTMAN_DEPLOY_KEY }}
@@ -46,4 +46,4 @@ jobs:
         with:
           repository: ${{ matrix.repository }}
           path: commercetools-sdk
-          ssh-key: ${{ matrix.sshKey }}
+          ssh-key: ${{ secrets[matrix.sshKey] }}
