--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -55,7 +55,7 @@ jobs:
           java-version: '16'
 
       - name: "Install Csharp"
-        if: matrix.language == "csharp"
+        if: ${{ matrix.language == "csharp" }}
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: |
@@ -63,7 +63,7 @@ jobs:
             7.0.x
 
       - name: "Install PHP with extensions"
-        if: matrix.language == "php"
+        if: ${{ matrix.language == "php" }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: "7.4"
@@ -73,7 +73,7 @@ jobs:
           ini-values: assert.exception=1, zend.assertions=1
 
       - name: Setup Node (uses version in .nvmrc)
-        if: matrix.language == "typescript"
+        if: ${{ matrix.language == "typescript" }}
         uses: actions/setup-node@v2
         with:
           node-version-file: 'commercetools-sdk/.nvmrc'
@@ -97,22 +97,22 @@ jobs:
         working-directory: commercetools-sdk
 
       - name: "Apply dotnet SDK mixin"
-        if: matrix.language == "csharp"
+        if: ${{ matrix.language == "csharp" }}
         run: |
           cp commercetools-sdk/api-csharp-mixin.raml commercetools-api-reference/api-specs/api/api-mixin.raml
 
       - name: "Apply Java SDK mixin"
-        if: matrix.language == "java"
+        if: ${{ matrix.language == "java" }}
         run: |
           cp commercetools-sdk/api-java-mixin.raml commercetools-api-reference/api-specs/api/api-mixin.raml
 
       - name: "Apply PHP SDK mixin"
-        if: matrix.language == "php"
+        if: ${{ matrix.language == "php" }}
         run: |
           cp commercetools-sdk/api-php-mixin.raml commercetools-api-reference/api-specs/api/api-mixin.raml
 
       - name: "Update GraphQL schema (CSharp)"
-        if: matrix.language == "csharp"
+        if: ${{ matrix.language == "csharp" }}
         run: |
           cp commercetools-api-reference/api-specs/graphql/schema.sdl commercetools-sdk/commercetools.Sdk/commercetools.Sdk.GraphQL.Api/schema.graphqls
           sed -i 's/^type Query implements.*/type Query {/' commercetools-sdk/commercetools.Sdk/commercetools.Sdk.GraphQL.Api/schema.graphqls
@@ -123,7 +123,7 @@ jobs:
           sed -i 's/^type Query implements.*/type Query {/' commercetools-sdk/commercetools/commercetools-graphql-api/src/main/resources/graphql/schema.graphqls
 
       - name: "Generate SDK"
-        if: matrix.language != "php"
+        if: ${{ matrix.language != "php" }}
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: commercetools-sdk
         env:
@@ -134,7 +134,7 @@ jobs:
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
 
       - name: "Generate SDK"
-        if: matrix.language == "php"
+        if: ${{ matrix.language == "php" }}
         run: sudo chmod 777 /usr/local/bin && make -j2 build
         working-directory: commercetools-sdk
         env:
