--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -1,7 +1,7 @@
 on:
-#  push:
-#    paths:
-#      - 'api-specs/**'
+  push:
+    paths:
+      - 'api-specs/**'
   workflow_dispatch:
 
 name: "SDK Generator"
@@ -202,22 +202,22 @@ jobs:
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
         working-directory: commercetools-sdk
 
-#      - uses: stefanzweifel/git-auto-commit-action@v4
-#        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/main'
-#        with:
-#          repository: commercetools-sdk
-#          branch: gen-sdk-updates
-#          commit_message: "build(codegen): updating SDK"
-#          commit_user_name: Auto Mation
-#          commit_user_email: automation@commercetools.com
-#          commit_author: Auto Mation <automation@commercetools.com>
-#
-#      - uses: stefanzweifel/git-auto-commit-action@v4
-#        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main'
-#        with:
-#          repository: commercetools-sdk
-#          branch: ${{ github.ref_name }}
-#          commit_message: "build(codegen): updating SDK"
-#          commit_user_name: Auto Mation
-#          commit_user_email: automation@commercetools.com
-#          commit_author: Auto Mation <automation@commercetools.com>
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/main'
+        with:
+          repository: commercetools-sdk
+          branch: gen-sdk-updates
+          commit_message: "build(codegen): updating SDK"
+          commit_user_name: Auto Mation
+          commit_user_email: automation@commercetools.com
+          commit_author: Auto Mation <automation@commercetools.com>
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main'
+        with:
+          repository: commercetools-sdk
+          branch: ${{ github.ref_name }}
+          commit_message: "build(codegen): updating SDK"
+          commit_user_name: Auto Mation
+          commit_user_email: automation@commercetools.com
+          commit_author: Auto Mation <automation@commercetools.com>
