avoid parallel run of linter and generator

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,9 +30,9 @@ jobs:
         with:
           java-version: '13'
 
-      - run: sudo chmod 777 /usr/local/bin && make -j2 generate lint
+      - run: sudo chmod 777 /usr/local/bin && make generate lint
         if: github.ref != 'refs/heads/main'
-      - run: sudo chmod 777 /usr/local/bin && make -j2 build
+      - run: sudo chmod 777 /usr/local/bin && make build
         if: github.ref == 'refs/heads/main'
 
       - name: "check pending changes"
