--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -57,6 +57,8 @@ jobs:
           app-id: ${{ secrets.SDK_APP_ID }}
           private-key: ${{ secrets.SDK_APP_PEM }}
       - name: Set GH user
+        env:
+           GITHUB_TOKEN: ${{ steps.generate_github_token.outputs.token }}
         run: |
           export GH_APP_USER=`gh api /users/ct-sdks%5Bbot%5D | jq .id`
           git config --global user.name "ct-sdks[bot]"
