--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -56,6 +56,8 @@ jobs:
         with:
           app-id: ${{ secrets.SDK_APP_ID }}
           private-key: ${{ secrets.SDK_APP_PEM }}
+          owner: ${{ github.repository_owner }}
+
       - name: Get App user
         id: get_app_user
         env:
