--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -208,7 +208,7 @@ jobs:
           fi
 
       - name: "check pending changes"
-        run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
+        run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*references.txt' | grep -c ^`" >> $GITHUB_ENV
         working-directory: commercetools-sdk
 
       - uses: stefanzweifel/git-auto-commit-action@v4
