fix TS changeset path

--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -186,31 +186,31 @@ jobs:
         if: ${{ matrix.language == 'typescript' }}
         run: |
           if [ -f ./changes_api.md ]; then
-            echo "---" > .changeset/changes_api.md
-            echo '"@commercetools/platform-sdk": minor' >> .changeset/changes_api.md
-            echo "---"  >> .changeset/changes_api.md
-            echo "**Api changes**" >> .changeset/changes_api.md
-            echo "" >> .changeset/changes_api.md
-            cat ./changes_api.md >> .changeset/changes_api.md
-            echo "" >> .changeset/changes_api.md
+            echo "---" > ./commercetools-sdk/.changeset/changes_api.md
+            echo '"@commercetools/platform-sdk": minor' >> ./commercetools-sdk/.changeset/changes_api.md
+            echo "---"  >> ./commercetools-sdk/.changeset/changes_api.md
+            echo "**Api changes**" >> ./commercetools-sdk/.changeset/changes_api.md
+            echo "" >> ./commercetools-sdk/.changeset/changes_api.md
+            cat ./changes_api.md >> ./commercetools-sdk/.changeset/changes_api.md
+            echo "" >> ./commercetools-sdk/.changeset/changes_api.md
           fi
           if [ -f ./changes_import.md ]; then
-            echo "---" > .changeset/changes_import.md
-            echo '"@commercetools/importapi-sdk": minor' >> .changeset/changes_import.md
-            echo "---"  >> .changeset/changes_import.md
-            echo "**Import changes**" >> .changeset/changes_import.md
-            echo "" >> .changeset/changes_import.md
-            cat ./changes_import.md >> .changeset/changes_import.md
-            echo "" >> .changeset/changes_import.md
+            echo "---" > ./commercetools-sdk/.changeset/changes_import.md
+            echo '"@commercetools/importapi-sdk": minor' >> ./commercetools-sdk/.changeset/changes_import.md
+            echo "---"  >> ./commercetools-sdk/.changeset/changes_import.md
+            echo "**Import changes**" >> ./commercetools-sdk/.changeset/changes_import.md
+            echo "" >> ./commercetools-sdk/.changeset/changes_import.md
+            cat ./changes_import.md >> ./commercetools-sdk/.changeset/changes_import.md
+            echo "" >> ./commercetools-sdk/.changeset/changes_import.md
           fi
           if [ -f ./changes_history.md ]; then
-            echo "---" > .changeset/changes_history.md
-            echo '"@commercetools/history-sdk": minor' >> .changeset/changes_history.md
-            echo "---"  >> .changeset/changes_history.md
-            echo "**History changes**" >> .changeset/changes_history.md
-            echo "" >> .changeset/changes_history.md
-            cat ./changes_import.md >> .changeset/changes_history.md
-            echo "" >> .changeset/changes_history.md
+            echo "---" > ./commercetools-sdk/.changeset/changes_history.md
+            echo '"@commercetools/history-sdk": minor' >> ./commercetools-sdk/.changeset/changes_history.md
+            echo "---"  >> ./commercetools-sdk/.changeset/changes_history.md
+            echo "**History changes**" >> ./commercetools-sdk/.changeset/changes_history.md
+            echo "" >> ./commercetools-sdk/.changeset/changes_history.md
+            cat ./changes_import.md >> ./commercetools-sdk/.changeset/changes_history.md
+            echo "" >> ./commercetools-sdk/.changeset/changes_history.md
           fi
 
       - name: 'Create change file'
