--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -209,7 +209,7 @@ jobs:
             echo "---"  >> ./commercetools-sdk/.changeset/changes_history.md
             echo "**History changes**" >> ./commercetools-sdk/.changeset/changes_history.md
             echo "" >> ./commercetools-sdk/.changeset/changes_history.md
-            cat ./changes_import.md >> ./commercetools-sdk/.changeset/changes_history.md
+            cat ./changes_history.md >> ./commercetools-sdk/.changeset/changes_history.md
             echo "" >> ./commercetools-sdk/.changeset/changes_history.md
           fi
 
