--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -238,6 +238,10 @@ jobs:
             cp ./changes.md ./commercetools-sdk/changes.md
           fi
 
+      - name: "prettier"
+        if: ${{ matrix.language == 'typescript' }}
+        run: prettier "**/*.{js,json,md,ts}" --write
+
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*references.txt' | grep -c ^`" >> $GITHUB_ENV
         working-directory: commercetools-sdk
