--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -240,7 +240,8 @@ jobs:
 
       - name: "prettier"
         if: ${{ matrix.language == 'typescript' }}
-        run: prettier "**/*.{js,json,md,ts}" --write
+        working-directory: commercetools-sdk
+        run: make prettify
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*references.txt' | grep -c ^`" >> $GITHUB_ENV
